--- a/internship.html
+++ b/internship.html
@@ -41,6 +41,30 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.smartrecruiters.com/SeekaTechnology/743999692284350-marketing-internship'>Seeka Technology Marketing Internship | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-28</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/SeekaTechnology/743999692348938-accounting-internship'>Seeka Technology Accounting Internship | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-28</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/SeekaTechnology/743999692348871-social-media-internship'>Seeka Technology Social Media Internship | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-28</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/SeekaTechnology/743999692284380-content-writer-internship'>Seeka Technology Content Writer Internship | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-28</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/SeekaTechnology/743999692284501-human-resource-internship'>Seeka Technology Human Resource Internship | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-28</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/SeekaTechnology/743999692348777-it-web-design-app-developer-internship'>Seeka Technology IT / Web Design / App Developer Internship | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-28</p>
+<hr/>
 <h5><a href='https://jobs.smartrecruiters.com/CuriocityGroupInc/743999687874339-video-host-intern'>Curiocity Group Inc. Video Host Intern | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Calgary, AB Canada</span></p>
 <p>Posted on: 2019-07-28</p>
@@ -61,7 +85,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/schneider-electric-spain/job/oQnCafwJ'>Schneider Electric - Spain Careers - Internship in Process Management</a></h5> 
+<h5><a href='http://jobs.jobvite.com/schneider-electric-spain/job/oQnCafwJ'>Schneider Electric - Spain Careers - Internship in Process Management</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -105,7 +129,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://sygnum.join.com/jobs/253896-full-stack-developer-intern-3-month-internship'>Job @ Sygnum (Z?rich): Full-Stack Developer Intern... | JOIN</a></h5> 
+<h5><a href='https://sygnum.join.com/jobs/253896-full-stack-developer-intern-3-month-internship'>Job @ Sygnum (Z?rich): Full-Stack Developer Intern... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -123,7 +147,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/waystar/05f25474-2e95-4630-a09b-8652ac6366ca'>Waystar - Graphic Design Intern</a></h5> 
+<h5><a href='https://jobs.lever.co/waystar/05f25474-2e95-4630-a09b-8652ac6366ca'>Waystar - Graphic Design Intern</a></h5> 
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -143,7 +167,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://tmmc.recruiterbox.com/jobs/fk0jw58'>
+<h5><a href='http://tmmc.recruiterbox.com/jobs/fk0jw58'>
     Marine Mammal Rescue and Response Intern - Monterey Bay Operations at The Marine Mammal Center
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -156,6 +180,11 @@
 <h5><a href='https://jobs.lever.co/fanatics/15c3d70f-27d8-48fa-8397-dece08b73325'>Fanatics - Communications Intern - Fall 2019</a></h5> 
 <p><span class="badge badge-light">New York New York</span></p>
 <p>Posted on: 2019-07-27</p>
+<hr/>
+<h5><a href='https://careers.peopleclick.com/careerscp/client_iata/external/en_US/jobDetails.do?functionName=getJobDetail&jobPostId=12665&localeCode=en-us'>- Bilingual Intern, Reception and Administration - Montreal NA NA</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Jul 19, 2019 ... ... Canada, Montreal; Business Analyst and Data Modeler for Airline Standards, 
+Canada, Montreal; Head of Engineering and maintenance, Canada, Montreal?...</p>
 <hr/>
 <h5><a href='https://nist.join.com/jobs/262433-internship-ui-ux'>Job @ NIST (Berlin): Internship UI/UX | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
@@ -341,7 +370,7 @@ quality?...</p>
 <p><span class="badge badge-light">Amsterdam</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://pagantis.workable.com/j/3DAC8272F0'>Java Software Engineer - Internship - Apply online - Pagantis - Jobs</a></h5> 
+<h5><a href='https://pagantis.workable.com/j/3DAC8272F0'>Java Software Engineer - Internship - Apply online - Pagantis - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Apply online for the job of Java Software Engineer - Internship at Pagantis.</p>
 <hr/>
@@ -436,35 +465,6 @@ will be providing reception coverage including processing telephone calls,?...</
 <hr/>
 <h5><a href='https://boards.greenhouse.io/zilingo/jobs/4374210002'>Job Application for Internship - Credit/Risk Analyst Intern at Zilingo</a></h5> 
 <p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-26</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/thehavasgroup/job/o3JCafwi'>The Havas Group Careers - Fall 2019 Creative Intern-HSE</a></h5> 
-<p><span class="badge badge-light">Atlanta Atlanta Atlanta Atlanta</span></p>
-<p>Posted on: 2019-07-26</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/skupos/ab4a6941-b264-48d4-8a73-a911379e150d'>Skupos - Partner Marketing Intern</a></h5> 
-<p><span class="badge badge-light">Denver</span></p>
-<p>Posted on: 2019-07-26</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/drchrono/284e8502-b3be-4e5c-b01d-a259ecc89368'>DrChrono - Finance & Accounting Intern</a></h5> 
-<p><span class="badge badge-light">Sunnyvale California</span></p>
-<p>Posted on: 2019-07-26</p>
-<hr/>
-<h5><a href='https://caterwings.join.com/jobs/256329-intern-online-marketing-m-f-berlin-topcater-rocket-internet'>Job @ CaterWings (Berlin): Intern Online Marketing... | JOIN</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Jul 16, 2019 ... CaterWings has a job opening for Intern Online Marketing (m/f) Berlin - Topcater (
-Rocket Internet) in Berlin (published: 19.03.2019). Apply now or check the?...</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/extremenetworks/job/o1wiafwJ'>Extreme Networks Careers - Sports & Entertainment Customer Success Intern</a></h5> 
-<p><span class="badge badge-light">Salem Salem</span></p>
-<p>Posted on: 2019-07-26</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/extremenetworks/job/oyHzafwI'>Extreme Networks Careers - Lab Network Engineer Intern</a></h5> 
-<p><span class="badge badge-light">North Carolina</span></p>
-<p>Posted on: 2019-07-26</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/nycedc/job/olUBafwK'>NYCEDC Careers - Fall Internship - Development</a></h5> 
-<p><span class="badge badge-light">New York New York</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
 
